fix weird spacing

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,9 @@
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 .header-jumbotron {
   margin-bottom: 0 !important;
   text-align: center;
